k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: app-prod
spec:
  selector:
    app: myservice
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
